k8s-resources/mongodb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mongodb
  annotations:
    alb.ingress.kubernetes.io/description: 'Mongodb Service Ingress'
    alb.ingress.kubernetes.io/load-balancer-name: 'mongo-alb'
    alb.ingress.kubernetes.io/ssl-certificate-no: "00000" # insert ncloud ssl certificate number
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/enable-sticky-session: "true"
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: mongodb
      port:
        number: 27017
